src/objects/Spaces__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Month__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;, (Asking_Rate_PSF__c * Square_Footage__c)/12 , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, (Asking_Rate_PSF__c * Square_Footage__c), IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, Asking_Rate_PSF__c, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;, Asking_Rate_PSF__c / 12 ,0))))</formula>
        <label>Amount/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Year__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;, Asking_Rate_PSF__c *  Square_Footage__c , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, (Asking_Rate_PSF__c *  Square_Footage__c) * 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;, Asking_Rate_PSF__c, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, Asking_Rate_PSF__c * 12 ,0))))</formula>
        <label>Amount/Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asking_Rate_PSF__c</fullName>
        <label>Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Factor__c</fullName>
        <formula>IF(  Available__c  == true , SF_Month__c * Square_Footage__c * Lease_Term_Months__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Lease__c</fullName>
        <label>Current Lease</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Rental_Rate_Type__c</fullName>
        <label>Current Rental Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>$/SF/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$/SF/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Rental_Rate__c</fullName>
        <label>Current Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Representation_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord Representation Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Months__c</fullName>
        <label>Lease Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT( Property__r.Market__c )</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Contiguous__c</fullName>
        <label>Maximum Contiguous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Divisible__c</fullName>
        <label>Minimum Divisible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Leasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leasing</label>
        <referenceTo>Project_Leasing__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Space Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Purpose</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <label>Rental Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>$/SF/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$/SF/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Month__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, Asking_Rate_PSF__c , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;, Asking_Rate_PSF__c / 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;, (Asking_Rate_PSF__c/ Square_Footage__c)/12 , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, (Asking_Rate_PSF__c )/ Square_Footage__c ,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$/SF/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Year__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;,  Asking_Rate_PSF__c , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, Asking_Rate_PSF__c * 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;, Asking_Rate_PSF__c/ Square_Footage__c , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, (Asking_Rate_PSF__c * 12)/ Square_Footage__c ,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$/SF/Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space_Sub_Type__c</fullName>
        <label>Space Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Flex Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Office Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Truck Terminal/Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Distribution Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Refrigerated/Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Commercial(Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Creative/Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Office Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Governmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Freestanding Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Retail (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Vehicle Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Specialty Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Neighborhood Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Available Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Property__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sublease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sublease?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <formula>TEXT( Property__r.Submarket__c )</formula>
        <label>Submarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite_Floor__c</fullName>
        <label>Suite/Floor #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <formula>Property__r.Zip_Code__c</formula>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <label>Space</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Industrial</fullName>
        <columns>Property__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Date_Available__c</columns>
        <columns>SF_Month__c</columns>
        <columns>SF_Year__c</columns>
        <columns>Amount_Month__c</columns>
        <columns>Amount_Year__c</columns>
        <columns>Lease_Type__c</columns>
        <columns>Lease_Term_Months__c</columns>
        <columns>Market__c</columns>
        <columns>Maximum_Contiguous__c</columns>
        <columns>Minimum_Divisible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Type__c</field>
            <operation>equals</operation>
            <value>Industrial</value>
        </filters>
        <label>Industrial</label>
    </listViews>
    <listViews>
        <fullName>Office</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Date_Available__c</columns>
        <columns>SF_Month__c</columns>
        <columns>SF_Year__c</columns>
        <columns>Amount_Month__c</columns>
        <columns>Amount_Year__c</columns>
        <columns>Lease_Type__c</columns>
        <columns>Lease_Term_Months__c</columns>
        <columns>Market__c</columns>
        <columns>Maximum_Contiguous__c</columns>
        <columns>Minimum_Divisible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Type__c</field>
            <operation>equals</operation>
            <value>Office</value>
        </filters>
        <label>Office</label>
    </listViews>
    <listViews>
        <fullName>Retail</fullName>
        <columns>Property__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Date_Available__c</columns>
        <columns>SF_Month__c</columns>
        <columns>SF_Year__c</columns>
        <columns>Amount_Month__c</columns>
        <columns>Amount_Year__c</columns>
        <columns>Lease_Type__c</columns>
        <columns>Lease_Term_Months__c</columns>
        <columns>Market__c</columns>
        <columns>Maximum_Contiguous__c</columns>
        <columns>Minimum_Divisible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Type__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>Retail</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Spaces Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fixed_Rental_Rate_Type_Picklist</fullName>
        <active>false</active>
        <errorConditionFormula>Not ( OR (TEXT( 
Rental_Rate_Type__c ) =&quot;Amount/Year&quot;,  TEXT( Rental_Rate_Type__c ) =&quot;Amount/Month&quot;,  TEXT( Rental_Rate_Type__c ) =&quot;$/SF/Month&quot;,  TEXT( Rental_Rate_Type__c ) =&quot;$/SF/Year&quot;, TEXT(
Rental_Rate_Type__c ) =&quot;None&quot;))</errorConditionFormula>
        <errorDisplayField>Rental_Rate_Type__c</errorDisplayField>
        <errorMessage>Do not modify this picklist. It&apos;s values are used for alternate calculations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rental_Rate_Type_Cannot_Equal_None</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT (Rental_Rate_Type__c) = &quot;None&quot;</errorConditionFormula>
        <errorDisplayField>Rental_Rate_Type__c</errorDisplayField>
        <errorMessage>Rental Rate Type Cannot Equal None</errorMessage>
    </validationRules>
</CustomObject>